Added some things to the portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -121,10 +121,10 @@
 		<b>Josh [$+] - </b>Josh reached out to a local organization for youth basketball to promote the event among young athletes.<br>
 		<b>Nick D.[$+] - </b>Nick D. developed the fliers that we distributed around campus.<br>
 		<h3>Volunteer Hours</h3>
-		<div style="text-align:center"><img src="img/us.png" height="60%" width="60%"/></div>
-		Each of us volunteered during race day itself. We were responsible for organizing traffic for the whole event. 
+		<p><div style="text-align:center"><img src="img/us.png" height="60%" width="60%"/></div></p>
+		<p>Each of us volunteered during race day itself. We were responsible for organizing traffic for the whole event. 
 		We worked for 2 and a half hours (from 8:30 to 11:00). If we each earned $10 an hour, then in total our volunteer 
-		hours contributed $175.
+		hours contributed $175.</p>
 
 		<h3>Total</h3>
 		<b>$1025!</b>
@@ -165,11 +165,22 @@
 		To support the cause we posted our fliers all around campus to get the word out. Below you can see every place we put them! (Pictures are linked to save on load time)<br>
 		<a href="img/IMG_3824.JPG" style="text-decoration:underline">1</a>,<a href="img/IMG_3825.JPG" style="text-decoration:underline">2</a>,<a href="img/IMG_3826.JPG" style="text-decoration:underline">3</a>,<a href="img/IMG_3827.JPG" style="text-decoration:underline">4</a>,<a href="img/IMG_3828.JPG" style="text-decoration:underline">5</a>,<a href="img/IMG_3829.JPG" style="text-decoration:underline">6</a>,<a href="img/IMG_3830.JPG" style="text-decoration:underline">7</a>,<a href="img/IMG_3831.JPG" style="text-decoration:underline">8</a>,<a href="img/IMG_3832.JPG" style="text-decoration:underline">9</a>,<a href="img/IMG_3842.JPG" style="text-decoration:underline">10</a>,<br><a href="img/IMG_3843.JPG" style="text-decoration:underline">11</a>,<a href="img/IMG_3844.JPG" style="text-decoration:underline">12</a>,<a href="img/IMG_3845.JPG" style="text-decoration:underline">13</a>,<a href="img/IMG_3846.JPG" style="text-decoration:underline">14</a>,<a href="img/IMG_3847.JPG" style="text-decoration:underline">15</a>,<a href="img/IMG_3848.JPG" style="text-decoration:underline">16</a>,<a href="img/IMG_3849.JPG" style="text-decoration:underline">17</a>,<a href="img/IMG_3850.JPG" style="text-decoration:underline">18</a>,<a href="img/IMG_3851.JPG" style="text-decoration:underline">19</a>,<a href="img/IMG_3852.JPG" style="text-decoration:underline">20</a>,<br><a href="img/IMG_3853.JPG" style="text-decoration:underline">21</a>,<a href="img/IMG_3854.JPG" style="text-decoration:underline">22</a>,<a href="img/IMG_3855.JPG" style="text-decoration:underline">23</a>,<a href="img/IMG_3856.JPG" style="text-decoration:underline">24</a>,<a href="img/IMG_3857.JPG" style="text-decoration:underline">25</a>,<a href="img/IMG_3858.JPG" style="text-decoration:underline">26</a>,<a href="img/IMG_3859.JPG" style="text-decoration:underline">27</a>,<a href="img/IMG_3860.JPG" style="text-decoration:underline">28</a>,<a href="img/IMG_3861.JPG" style="text-decoration:underline">29</a>,<a href="img/IMG_3862.JPG" style="text-decoration:underline">30</a>,<br><a href="img/IMG_3863.JPG" style="text-decoration:underline">31</a>,<a href="img/IMG_3864.JPG" style="text-decoration:underline">32</a>,<a href="img/IMG_3865.JPG" style="text-decoration:underline">33</a>,<a href="img/IMG_3866.JPG" style="text-decoration:underline">34</a>,<a href="img/IMG_3867.JPG" style="text-decoration:underline">35</a>,<a href="img/IMG_3868.JPG" style="text-decoration:underline">36</a>,<a href="img/IMG_3869.JPG" style="text-decoration:underline">37</a>,<a href="img/IMG_3870.JPG" style="text-decoration:underline">38</a>,<a href="img/IMG_3871.JPG" style="text-decoration:underline">39</a>,<a href="img/IMG_3872.JPG" style="text-decoration:underline">40</a>,<br><a href="img/IMG_3873.JPG" style="text-decoration:underline">41</a>,<a href="img/IMG_3874.JPG" style="text-decoration:underline">42</a>,<a href="img/IMG_3875.JPG" style="text-decoration:underline">43</a>,<a href="img/IMG_3876.JPG" style="text-decoration:underline">44</a>,<a href="img/IMG_3877.JPG" style="text-decoration:underline">45</a>,<a href="img/IMG_3878.JPG" style="text-decoration:underline">46</a>,<a href="img/IMG_3879.JPG" style="text-decoration:underline">47</a>,<a href="img/IMG_3880.JPG" style="text-decoration:underline">48</a>
 		
-		<h3>Race Day!</h3>
+		<h4>Race Day!</h4>
 		<div style="text-align:center">
 			<video width="320" height="240" controls="controls" src="img/IMG_3965.MOV"></video>
 			<video width="320" height="240" controls="controls" src="img/IMG_3977.MOV"></video>
 		</div>
+
+		<h3>Additional Examples of our Work</h3>
+		<h4>Communications</h4>
+		<a href="img/email5.png" style="text-decoration:underline">Contacting Home Sweet Home Ministries</a> (<a href="img/email6.png" style="text-decoration:underline">Continuation</a>)<br>
+		<a href="img/email7.png" style="text-decoration:underline">Response from HSHM</a><br>
+		<a href="img/email1.png" style="text-decoration:underline">Contacting Parking Lots</a><br>
+		<a href="img/email2.png" style="text-decoration:underline">Parking Response</a><br>
+		<a href="img/email4.png" style="text-decoration:underline">Continuing to Offer Assistance</a><br>
+		<a href="img/email3.png" style="text-decoration:underline">Feedback from Fleet Feet</a><br><br>
+		<h4>Visiting the HSHM Warehouse</h4>
+		We were very fortunate to be given a tour of the HSHM Warehouse during our time meeting with the organization. Here are some photos.
 
 		<hr class="large">
 	    </div>			
