Added some warehouse pictures and fixed some of the headers in the portfolio. In addition, I fixed the scrolling tabs from dark grey to white

--- a/portfolio.html
+++ b/portfolio.html
@@ -165,11 +165,12 @@
 		To support the cause we posted our fliers all around campus to get the word out. Below you can see every place we put them! (Pictures are linked to save on load time)<br>
 		<a href="img/IMG_3824.JPG" style="text-decoration:underline">1</a>,<a href="img/IMG_3825.JPG" style="text-decoration:underline">2</a>,<a href="img/IMG_3826.JPG" style="text-decoration:underline">3</a>,<a href="img/IMG_3827.JPG" style="text-decoration:underline">4</a>,<a href="img/IMG_3828.JPG" style="text-decoration:underline">5</a>,<a href="img/IMG_3829.JPG" style="text-decoration:underline">6</a>,<a href="img/IMG_3830.JPG" style="text-decoration:underline">7</a>,<a href="img/IMG_3831.JPG" style="text-decoration:underline">8</a>,<a href="img/IMG_3832.JPG" style="text-decoration:underline">9</a>,<a href="img/IMG_3842.JPG" style="text-decoration:underline">10</a>,<br><a href="img/IMG_3843.JPG" style="text-decoration:underline">11</a>,<a href="img/IMG_3844.JPG" style="text-decoration:underline">12</a>,<a href="img/IMG_3845.JPG" style="text-decoration:underline">13</a>,<a href="img/IMG_3846.JPG" style="text-decoration:underline">14</a>,<a href="img/IMG_3847.JPG" style="text-decoration:underline">15</a>,<a href="img/IMG_3848.JPG" style="text-decoration:underline">16</a>,<a href="img/IMG_3849.JPG" style="text-decoration:underline">17</a>,<a href="img/IMG_3850.JPG" style="text-decoration:underline">18</a>,<a href="img/IMG_3851.JPG" style="text-decoration:underline">19</a>,<a href="img/IMG_3852.JPG" style="text-decoration:underline">20</a>,<br><a href="img/IMG_3853.JPG" style="text-decoration:underline">21</a>,<a href="img/IMG_3854.JPG" style="text-decoration:underline">22</a>,<a href="img/IMG_3855.JPG" style="text-decoration:underline">23</a>,<a href="img/IMG_3856.JPG" style="text-decoration:underline">24</a>,<a href="img/IMG_3857.JPG" style="text-decoration:underline">25</a>,<a href="img/IMG_3858.JPG" style="text-decoration:underline">26</a>,<a href="img/IMG_3859.JPG" style="text-decoration:underline">27</a>,<a href="img/IMG_3860.JPG" style="text-decoration:underline">28</a>,<a href="img/IMG_3861.JPG" style="text-decoration:underline">29</a>,<a href="img/IMG_3862.JPG" style="text-decoration:underline">30</a>,<br><a href="img/IMG_3863.JPG" style="text-decoration:underline">31</a>,<a href="img/IMG_3864.JPG" style="text-decoration:underline">32</a>,<a href="img/IMG_3865.JPG" style="text-decoration:underline">33</a>,<a href="img/IMG_3866.JPG" style="text-decoration:underline">34</a>,<a href="img/IMG_3867.JPG" style="text-decoration:underline">35</a>,<a href="img/IMG_3868.JPG" style="text-decoration:underline">36</a>,<a href="img/IMG_3869.JPG" style="text-decoration:underline">37</a>,<a href="img/IMG_3870.JPG" style="text-decoration:underline">38</a>,<a href="img/IMG_3871.JPG" style="text-decoration:underline">39</a>,<a href="img/IMG_3872.JPG" style="text-decoration:underline">40</a>,<br><a href="img/IMG_3873.JPG" style="text-decoration:underline">41</a>,<a href="img/IMG_3874.JPG" style="text-decoration:underline">42</a>,<a href="img/IMG_3875.JPG" style="text-decoration:underline">43</a>,<a href="img/IMG_3876.JPG" style="text-decoration:underline">44</a>,<a href="img/IMG_3877.JPG" style="text-decoration:underline">45</a>,<a href="img/IMG_3878.JPG" style="text-decoration:underline">46</a>,<a href="img/IMG_3879.JPG" style="text-decoration:underline">47</a>,<a href="img/IMG_3880.JPG" style="text-decoration:underline">48</a>
 		
-		<h4>Race Day!</h4>
+		<h3>Race Day!</h3>
 		<div style="text-align:center">
 			<video width="320" height="240" controls="controls" src="img/IMG_3965.MOV"></video>
 			<video width="320" height="240" controls="controls" src="img/IMG_3977.MOV"></video>
 		</div>
+		
 
 		<h3>Additional Examples of our Work</h3>
 		<h4>Communications</h4>
@@ -181,6 +182,18 @@
 		<a href="img/email3.png" style="text-decoration:underline">Feedback from Fleet Feet</a><br><br>
 		<h4>Visiting the HSHM Warehouse</h4>
 		We were very fortunate to be given a tour of the HSHM Warehouse during our time meeting with the organization. Here are some photos.
+		<div style="text-align:center">
+			<img src="img/ware1.jpg" height="30%" width="30%"/>
+			<img src="img/ware2.jpg" height="30%" width="30%"/>
+			<img src="img/ware3.jpg" height="30%" width="30%"/>
+			<img src="img/ware4.jpg" height="30%" width="30%"/>
+			<img src="img/ware5.jpg" height="30%" width="30%"/>
+			<img src="img/ware7.jpg" height="30%" width="30%"/>
+			<img src="img/ware8.jpg" height="30%" width="30%"/>
+			<img src="img/ware9.jpg" height="30%" width="30%"/>
+		</div>
+		We were surprised to learn that the building was a former warehouse for Steak n Shake! It was amazing how many clothes passed through this facility to be sold in their Mission Mart. It was also incredible to see volunteers in action (We didn't take pictures of the volunteers for obvious reasons).
+
 
 		<hr class="large">
 	    </div>			
