I uploaded the final submission document to the files section

--- a/portfolio.html
+++ b/portfolio.html
@@ -129,6 +129,14 @@
 		<h3>Total</h3>
 		<b>$1025!</b>
 
+		<h3>Correspondence</h3>
+		<a href="img/email5.png" style="text-decoration:underline">Contacting Home Sweet Home Ministries</a> (<a href="img/email6.png" style="text-decoration:underline">Continuation</a>)<br>
+		<a href="img/email7.png" style="text-decoration:underline">Response from HSHM</a><br>
+		<a href="img/email1.png" style="text-decoration:underline">Contacting Parking Lots</a><br>
+		<a href="img/email2.png" style="text-decoration:underline">Parking Response</a><br>
+		<a href="img/email4.png" style="text-decoration:underline">Continuing to Offer Assistance</a><br>
+		<a href="img/email3.png" style="text-decoration:underline">Feedback from Fleet Feet</a><br>
+
 		<h3>Advertising</h3>
 		<h4>Radio Promotions</h4>
 		<div style="text-align:center">
@@ -170,16 +178,23 @@
 			<video width="320" height="240" controls="controls" src="img/IMG_3965.MOV"></video>
 			<video width="320" height="240" controls="controls" src="img/IMG_3977.MOV"></video>
 		</div>
-		
+		<div style="text-align:center">
+			<img src="img/IMG_3921.JPG" height="30%" width="30%"/>
+			<img src="img/IMG_3924.JPG" height="30%" width="30%"/>
+			<img src="img/IMG_3929.JPG" height="30%" width="30%"/>
+			<img src="img/IMG_3930.JPG" height="30%" width="30%"/>
+			<img src="img/IMG_3931.JPG" height="30%" width="30%"/>
+			<img src="img/IMG_3926.JPG" height="30%" width="30%"/>
+			<img src="img/IMG_3940.JPG" height="30%" width="30%"/>
+			<img src="img/IMG_3949.JPG" height="30%" width="30%"/>
+			<img src="img/IMG_3952.JPG" height="30%" width="30%"/>
+			<img src="img/IMG_3958.JPG" height="30%" width="30%"/>
+			<img src="img/IMG_3953.JPG" height="30%" width="30%"/>
+			<img src="img/IMG_3969.JPG" height="30%" width="30%"/>
+		</div>
 
-		<h3>Additional Examples of our Work</h3>
-		<h4>Communications</h4>
-		<a href="img/email5.png" style="text-decoration:underline">Contacting Home Sweet Home Ministries</a> (<a href="img/email6.png" style="text-decoration:underline">Continuation</a>)<br>
-		<a href="img/email7.png" style="text-decoration:underline">Response from HSHM</a><br>
-		<a href="img/email1.png" style="text-decoration:underline">Contacting Parking Lots</a><br>
-		<a href="img/email2.png" style="text-decoration:underline">Parking Response</a><br>
-		<a href="img/email4.png" style="text-decoration:underline">Continuing to Offer Assistance</a><br>
-		<a href="img/email3.png" style="text-decoration:underline">Feedback from Fleet Feet</a><br><br>
+		<h3>Additional Content</h3>
+		
 		<h4>Visiting the HSHM Warehouse</h4>
 		We were very fortunate to be given a tour of the HSHM Warehouse during our time meeting with the organization. Here are some photos.
 		<div style="text-align:center">
