Added some sections to the portfolio and updated the code

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,6 +89,13 @@
 		Have shirts finished and shipped by April 10<br>
 		Have the run April 22<br>
 
+		<h3>Updated (Actual) Timeline</h3>
+		Make contact with the organization by February 23rd<br>
+		Start Advertising the event by March 1<br>
+		Start flier distribution on March 20th<br>
+		Get parking lot usage confirmation by March 22<br>
+		Have the run on March 26<br>
+
 		<h3>Agendas and Minutes (As of 4/11)</h3>
 		Meeting 1: <a style="text-decoration:underline" href="meeting-1-agenda">Agenda</a><br>
 		Meeting 2: <a style="text-decoration:underline" href="meeting-2-agenda">Agenda</a><br>
@@ -114,12 +121,12 @@
 		This is the funding contributed by each of our members. The first part counts as promotional value obtained, the second counts as volunteer hours spent. It should be noted that not all fund raising attempts have been completed yet, and many of them are not allowed to be considered.<br>
 		<h3>Promotions</h3>
 		<b>Nick F. [$850+] - </b>Nick reached out to two local radio stations and asked if they could promote the 2017 Run for Hope event on air. Both stations agreed. To see the confirmation emails, please see the following links for each station. Information has been redacted for privacy. <a style="text-decoration:underline" href="img/wzndAgree.png">WZND</a>, and <a style="text-decoration:underline" href="img/wgltAgree.png">WGLT</a>. For valuation information for each station, please see each of the following links. <a style="text-decoration:underline" href="img/wzndVal.png">WZND</a>, because of this information we are valuing the promotions at $100 which is the base package for on air announcements. <a style="text-decoration:underline" href="img/wgltVal.png">WGLT</a>, Because this event is not being run through underwriting we are changing the value of the promotion. Based on communication with our professor we have agreed to value this at $15 a spot. Based on the information we have received from WGLT, these spots will air 20 times a week for 2.5 weeks. $15 * 20 * 2.5 = $750. For these reasons we are valuing the WGLT promotion at $750. In addition the event has been submitted to the ISU and WGLT community calendars (awaiting approval from ISU), <a style="text-decoration:underline" href="img/wglt1.png">WGLT-1</a>,  <a style="text-decoration:underline" href="img/wglt2.png">WGLT-2</a>. In addition, Nick printed out hundreds of fliers and distributed them around campus.<br>
-		<b>John [$+] - </b>John worked with the local school district, Unit 5 to get fliers in the hands of young athletes.<br>
-		<b>Nathan [$+] - </b>Nathan distributed fliers around campus with Nick F. and Blake.<br>
-		<b>Kevin [$+] - </b>Kevin reached out to a local radio station to try to get promotions for the event, however that radio station did not return emails.<br>
-		<b>Blake [$+] - </b>Blake distributed fliers around campus with Nick F. and Nathan.<br>	
-		<b>Josh [$+] - </b>Josh reached out to a local organization for youth basketball to promote the event among young athletes.<br>
-		<b>Nick D.[$+] - </b>Nick D. developed the fliers that we distributed around campus.<br>
+		<b>John [$+] - </b>John worked with the local school district, Unit 5 to get fliers in the hands of young athletes. He also was an outstanding Liaison who helped us get in touch with local businesses to see if we could use their parking lots as well as kept us in communication with HSHM.<br>
+		<b>Nathan [$+] - </b>Nathan distributed fliers around campus with Nick F. and Blake. Nathan also served as our primary Recorder who always turn in our Agendas and Minutes on time and with a high quality.<br>
+		<b>Kevin [$+] - </b>Kevin reached out to a local radio station to try to get promotions for the event, however that radio station did not return emails. In addition Kevin did research to find other avenues we could pursue to increase our promotional value.<br>
+		<b>Blake [$+] - </b>Blake distributed fliers around campus with Nick F. and Nathan. In addition Blake tried to find more ways we could increase our promotional value through getting donations from local businesses, however this was later rejected by HSHM.<br>	
+		<b>Josh [$+] - </b>Josh reached out to a local organization for youth basketball to promote the event among young athletes. He also researched what the process would be for us to sign-up to volunteer on race day.<br>
+		<b>Nick D.[$+] - </b>Nick D. developed the fliers that we distributed around campus. In addition, he assisted with getting photos during the event and providing artistic oversight to our website.<br>
 		<h3>Volunteer Hours</h3>
 		<p><div style="text-align:center"><img src="img/us.png" height="60%" width="60%"/></div></p>
 		<p>Each of us volunteered during race day itself. We were responsible for organizing traffic for the whole event. 
@@ -191,10 +198,14 @@
 			<img src="img/IMG_3958.JPG" height="30%" width="30%"/>
 			<img src="img/IMG_3953.JPG" height="30%" width="30%"/>
 			<img src="img/IMG_3969.JPG" height="30%" width="30%"/>
-		</div>
+		</div><br>
+    		On race day, we helped coordinate parking for the entire event. Getting there long before the race started we directed traffic, prioritized parking locations, and determined capacity. Our team made up for the entirety of the lead parking coordination staff.<br><br>
+		<div style="text-align:center"><img src="img/volunteering.png" height="65%" width="65%"/></div>
+
+		<h3>Results</h3>
+		Unfortunately the race did not turn out how we hoped. In previous years the Run for Hope has gotten around 210-220 participants. Sadly, this year we only had 175 run. We have a few reasons for this that we have outlined in our Campaign Closeout Report.
 
 		<h3>Additional Content</h3>
-		
 		<h4>Visiting the HSHM Warehouse</h4>
 		We were very fortunate to be given a tour of the HSHM Warehouse during our time meeting with the organization. Here are some photos.
 		<div style="text-align:center">
