--- a/hidden10121031021.html
+++ b/hidden10121031021.html
@@ -1,3 +1,3 @@
 <html>
-    <video width="320" height="240" controls="controls" src="files/hide.MP4"></video>
+    <video width="320" height="240" controls="controls" src="files/hide.mp4" type='video/mp4'></video>
 </html>
