--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
     <div class="container" style="margin-top:-50px">
         <div class="row">
             <div class="text-block" style="margin-left: 15px;margin-right: 15px;">
+		<h3>Campaign Closeout Video</h3>
+		<div style="text-align:center">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/dt6e55QNCRg" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<center>You may need to turn up your volume!</center>
 		<h3>Team Charter</h3>
                 <p>
 		Hello and welcome to our website. We are a philanthropic organization operating in the Bloomington Illinois area.
