--- a/portfolio.html
+++ b/portfolio.html
@@ -65,10 +65,24 @@
     <div class="container" style="margin-top:0px">
         <div class="row">
             <div class="text-block" style="margin-left: 15px;margin-right: 15px;">
+		<h3>Team Members and Roles</h3>
+		Team member names and formal roles can be found in the About Us section. You can find it in the tab at the top-right of this page.
+		<h3>Team Name and Logo</h3>
+		<div style="text-align:center"><img width="25%" height="25%" src="img/cleanLogo.png"/></div>
+		<center><h3>Team Septagon</h3></center>
+
 		<h3>Mission Statement</h3>
 		<i>Support, adapt, succeed. Support those in need. Adapt to changing circumstances. Succeed in all pursuits.</i><br><br>
-		
 		<div style="text-align:center"><img width="50%" height="50%" src="img/March 2 Meeting.jpg"/></div>
+		<h3>Group Rules</h3>
+		Be on time<br>
+		Be accountable for your work<br>
+		Be responsive to messaging<br>
+		Be productive during meetings<br>
+		Be professional with organizations<br>
+		Be Respectful to everyone's ideas<br>
+		Always vote for major decisions<br>
+		Be Prepared for meetings<br>
 
 		<h3>Project Proposal</h3>
 		This link will lead you to our original project proposal (<a style="text-decoration:underline" href="project-proposal">Project Proposal</a>).
@@ -123,7 +137,7 @@
 		<b>Kevin [$+] - </b>Kevin reached out to a local radio station to try to get promotions for the event, however that radio station did not return emails. In addition Kevin did research to find other avenues we could pursue to increase our promotional value.<br>
 		<b>Blake [$+] - </b>Blake distributed fliers around campus with Nick F. and Nathan. In addition Blake tried to find more ways we could increase our promotional value through getting donations from local businesses, however this was later rejected by HSHM.<br>	
 		<b>Josh [$+] - </b>Josh reached out to a local organization for youth basketball to promote the event among young athletes. He also researched what the process would be for us to sign-up to volunteer on race day.<br>
-		<b>Nick D.[$+] - </b>Nick D. developed the fliers that we distributed around campus. In addition, he assisted with getting photos during the event and providing artistic oversight to our website.<br>
+		<b>Nick D.[$+] - </b>Nick D. developed the fliers that we distributed around campus. He also leant his artistic skills to the development of our team logo. In addition, he assisted with getting photos during the event and providing artistic oversight to our website.<br>
 		<h3>Volunteer Hours</h3>
 		<p><div style="text-align:center"><img src="img/us.png" height="60%" width="60%"/></div></p>
 		<p>Each of us volunteered during race day itself. We were responsible for organizing traffic for the whole event. 
@@ -132,6 +146,15 @@
 
 		<h3>Total</h3>
 		<b>$1025!</b>
+
+		<h3>Campaign Closeout Video</h3>
+		<div style="text-align:center">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/dt6e55QNCRg" frameborder="0" allowfullscreen></iframe>
+			<center>You may need to turn your volume up!</center>
+		</div>
+
+		<h3>Campaign Closeout Report</h3>
+		<a href="files/Campaign Closeout.pdf" style="text-decoration:underline">Campaign Closeout Report (Link)</a>
 
 		<h3>Correspondence</h3>
 		<a href="img/email5.png" style="text-decoration:underline">Contacting Home Sweet Home Ministries</a> (<a href="img/email6.png" style="text-decoration:underline">Continuation</a>)<br>
