--- a/portfolio.html
+++ b/portfolio.html
@@ -151,7 +151,7 @@
 
 		<h3>Campaign Closeout Video</h3>
 		<div style="text-align:center">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/dt6e55QNCRg" frameborder="0" allowfullscreen></iframe>
+			<iframe width="560px" height="315px" src="https://www.youtube.com/embed/dt6e55QNCRg" frameborder="0" allowfullscreen></iframe>
 			<center>You may need to turn your volume up!</center>
 		</div>
 
