Needed to remove the picture from the meeting 11 minutes

--- a/meeting-11-minutes.html
+++ b/meeting-11-minutes.html
@@ -65,7 +65,7 @@
     <div class="container" style="margin-top:0px">
         <div class="row">
             <div class="text-block" style="margin-left: 15px;margin-right: 15px;">
-		<div style="text-align:center"><img src="img/Group Meeting 4 13.jpg" height="60%" width="60%"/></div><br>
+		<!--<div style="text-align:center"><img src="img/Group Meeting 4 13.jpg" height="60%" width="60%"/></div><br>-->
 		<p><b>Call to order:</b> 4:30pm</p>
 
 <p><b>Members present:</b> Nathaniel, Josh, Blake, Nick D., Nick F., Kevin, and John</p>
